:recycle: refactor: footer styling in styles.css

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -183,11 +183,7 @@ button[type="reset"] {
 
 footer {
   width: 100%;
-  height: 3.5rem;
-
-  top: auto;
-  bottom: 0;
-  position: fixed;  
+  padding: 3.5rem;
 
   display: flex;
   align-items: center;
