:recycle: refactor: textarea e mudanças de estilo

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -34,8 +34,10 @@ html {
 body {
   width: 100%;
   height: 100vh;
+
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 
   font-size: 1rem;
   font-family: "Inter", sans-serif;
@@ -53,14 +55,13 @@ main {
 
 header {
   margin-top: 2.5rem;
-  height: 3rem;
+  /* height: 3rem; */
 
-  margin-bottom: 5rem;
+  /* margin-bottom: 1rem; */
 }
 
 main {
   width: 100%;
-  /* height: 100%; */
 
   display: flex;
   justify-content: space-between;
@@ -69,7 +70,7 @@ main {
 
 .col-left {
   width: 100%;
-  margin-left: 15rem;
+  margin-left: 10rem;
   padding: 0;
   
   display: flex;
@@ -86,17 +87,19 @@ main {
   justify-content: space-between;
 }
 
-input {
+textarea {
   width: 100%;
   padding: 1rem 0;
+
+  font-family: 'Inter', sans-serif;
 
   border: none;
   background: none;
   font-size: 2rem;
-  
+  outline: none;
 }
 
-input::placeholder {
+textarea::placeholder {
   color: var(--dark-blue-300);
 }
 
@@ -136,6 +139,8 @@ button {
 
   text-align: center;
   cursor: pointer;
+
+  transition: ease-in-out .2s;
 }
 
 button[type="reset"] {
@@ -144,15 +149,27 @@ button[type="reset"] {
   color: var(--dark-blue-300);
 }
 
+button:hover {
+  filter: opacity(.9);
+}
+
+button[type="reset"]:hover {
+  border: 1px solid transparent;
+
+  color: var(--white);
+  background-color: var(--light-blue-500);
+}
+
 .col-right {
   width: 100%;
   max-width: 25rem;
   padding: 2rem;
 
-  margin-top: -8rem;
+  margin-top: -4rem;
 
   border-radius: 2rem;
-  background-color: white;  
+  background-color: white; 
+  box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
 }
 
 .col-right-content {
@@ -183,11 +200,26 @@ button[type="reset"] {
 
 footer {
   width: 100%;
-  padding: 3.5rem;
+  padding: 1.5rem;
 
   display: flex;
   align-items: center;
   justify-content: center;
 
   color: var(--dark-blue-500);
+}
+
+footer span {
+  font-size: .875em;
+}
+
+footer a {
+  font-weight: 600;
+  color: var(--dark-blue-500);
+  text-decoration: none;
+  transition: ease-in-out .2s;
+}
+
+footer a:hover {
+  color: var(--dark-blue-200)
 }
