--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,11 +5,11 @@
   --dark-blue-400: #072b61;
   --dark-blue-500: #052051;
 
-  --light-blue-100: #f3f5fc;
-  --light-blue-200: #eff1fa;
-  --light-blue-300: #e9ecf8;
-  --light-blue-400: #aab2d5;
-  --light-blue-500: #757fb2;
+  --light-blue-100: #eaeef5;
+  --light-blue-200: #d8e1ed;
+  --light-blue-300: #c0cde1;
+  --light-blue-400: #a6b4d3;
+  --light-blue-500: #8f9cc5;
 
   --gray-100: #ced4da;
   --gray-200: #adb5bd;
@@ -28,7 +28,7 @@
 }
 
 html {
-  font-size: 93.75%;
+  font-size: 100%;
 }
 
 body {
@@ -48,62 +48,40 @@ body {
   --moz-osx-font-smoothing: grayscale;
 }
 
-header, 
-main {
-  padding: 0 2.5rem;
-}
-
-header {
-  margin-top: 2.5rem;
-  /* height: 3rem; */
-
-  /* margin-bottom: 1rem; */
-}
-
-main {
+.container {
   width: 100%;
+  margin: 0 auto;
+  padding: 2.5rem 2rem 0 5rem;
 
   display: flex;
   justify-content: space-between;
-  gap: 5rem;
+  gap: 5.5rem;
 }
 
 .col-left {
   width: 100%;
-  margin-left: 10rem;
-  padding: 0;
-  
+
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
 }
 
-.col-left-content {
+header {
+  margin-bottom: 5rem;
+}
+
+main {
   width: 100%;
   height: 100%;
-  
+  padding-left: 15rem;
+  margin-bottom: 2rem;
+
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-textarea {
-  width: 100%;
-  padding: 1rem 0;
-
-  font-family: 'Inter', sans-serif;
-
-  border: none;
-  background: none;
-  font-size: 2rem;
-  outline: none;
-}
-
-textarea::placeholder {
-  color: var(--dark-blue-300);
-}
-
-.col-left-footer {
+.main-footer {
   width: 100%;
   margin-top: 2rem;
 
@@ -112,14 +90,14 @@ textarea::placeholder {
   gap: 1rem;
 }
 
-.text-info {
+.main-footer-alert {
   display: flex;
   gap: 0.5rem;
 
-  font-size: .75rem;
+  font-size: 0.75rem;
 }
 
-.buttons {
+.main-buttons {
   width: 100%;
 
   display: flex;
@@ -127,75 +105,41 @@ textarea::placeholder {
   justify-content: space-between;
 }
 
-button {
-  width: 100%;
-  padding: 1rem;
-
-  border: none;
-  border-radius: 1rem;
-
-  background-color: var(--dark-blue-300);
-  color: var(--white);
-
-  text-align: center;
-  cursor: pointer;
-
-  transition: ease-in-out .2s;
-}
-
-button[type="reset"] {
-  border: 1px solid var(--dark-blue-300);
-  background-color: var(--gray-100);
-  color: var(--dark-blue-300);
-}
-
-button:hover {
-  filter: opacity(.9);
-}
-
-button[type="reset"]:hover {
-  border: 1px solid transparent;
-
-  color: var(--white);
-  background-color: var(--light-blue-500);
-}
-
 .col-right {
-  width: 100%;
-  max-width: 25rem;
-  padding: 2rem;
-
-  margin-top: -4rem;
+  width: 30rem;
+  padding: 12.0625rem 2rem;
 
   border-radius: 2rem;
-  background-color: white; 
+  background-color: white;
   box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
-}
-
-.col-right-content {
-  width: 100%;
-  height: 35rem;
-  padding: 1rem 0;
 
   display: flex;
-  gap: 1rem;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.col-right-box {
+  padding: 2rem 0;
+
+  display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 
   text-align: center;
 }
 
-.col-right-content h1 {
-  margin-top: 2rem;
+.col-right-box h1 {
+  margin-top: 1.5rem;
 
   font-size: 1.5rem;
   font-weight: 700;
   color: var(--gray-500);
 }
 
-.col-right-content img {
-  width: 75%;
+.col-right-box img {
+  width: 95%;
 }
 
 footer {
@@ -210,16 +154,5 @@ footer {
 }
 
 footer span {
-  font-size: .875em;
-}
-
-footer a {
-  font-weight: 600;
-  color: var(--dark-blue-500);
-  text-decoration: none;
-  transition: ease-in-out .2s;
-}
-
-footer a:hover {
-  color: var(--dark-blue-200)
+  font-size: 0.875em;
 }
