--- a/src/styles/sizes.css
+++ b/src/styles/sizes.css
@@ -1,17 +1,7 @@
 /* Media Queries */
 
 /* Tablets */
-@media screen and (min-width: 481px) and (max-width: 767px) {
-  html {
-    font-size: 87.5%;
-  }
-
-  body {
-  }
-}
-
-/* Mobile */
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   html {
     font-size: 87.5%;
   }
@@ -19,7 +9,7 @@
   body {
     .container {
       height: 100vh;
-      padding: 1.5rem 1rem 0 1rem;
+      padding: 4.5rem 2.5em 0 2.5rem;
 
       flex-direction: column;
       justify-content: space-between;
@@ -35,6 +25,7 @@
 
         main {
           width: 100%;
+          margin-bottom: 0;
           padding-left: 0;
 
           .main-footer {
@@ -68,12 +59,27 @@
     }
 
     footer {
-      padding: 2rem 0;
-      text-align: center;
-
       span {
         font-size: 1rem;
       }
+    }
+  }
+}
+
+/* Mobile */
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  html {
+    font-size: 87.5%;
+  }
+
+  body {
+    .container {
+      padding: 1.5rem 1rem 0 1rem;
+    }
+
+    footer {
+      padding: 1.5rem 0;
+      text-align: center;
     }
   }
 }
